# Weel-Payments

./: README.md  TODO.md  pyproject.toml  requirements.txt
weel_payments/: manage.py
weel_payments/cards/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
weel_payments/cards/migrations/: 0001_initial.py  0002_alter_cardcontrol_card.py  0002_alter_cardcontrol_type_alter_transaction_status_and_more.py  0003_alter_card_balance_alter_transaction_amount.py
weel_payments/cards/tests/: test_card_api.py  test_card_control_api.py  test_models.py  test_transaction_api.py
weel_payments/weel_payments/: asgi.py  settings.py  urls.py  wsgi.py
